Java 8 friendliness in romhandler classes